<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_vertical"
        android:orderInCategory="100"
        android:title="@string/action_vertical"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_horizontal"
        android:orderInCategory="100"
        android:title="@string/action_horizontal"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_grid"
        android:orderInCategory="100"
        android:title="@string/action_grid"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_staggered_v"
        android:orderInCategory="100"
        android:title="@string/action_staggered_v"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_staggered_h"
        android:orderInCategory="100"
        android:title="@string/action_staggered_h"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_multiple"
        android:orderInCategory="100"
        android:title="@string/action_multiple"
        app:showAsAction="never" />
</menu>
